CSS Fixes, alertify prompt visibility

--- a/css/frag/plugins.less
+++ b/css/frag/plugins.less
@@ -269,17 +269,14 @@
     font-family: sans-serif;
 }
 .alertify {
-    background: #FFF;
-
     border-radius: 6px;
     box-shadow: 0 3px 7px rgba(0,0,0,.3);
     -webkit-background-clip: padding;     /* Safari 4? Chrome 6? */
        -moz-background-clip: padding;     /* Firefox 3.6 */
             background-clip: padding-box; /* Firefox 4, Safari 5, Opera 10, IE 9 */
-    background: rgba(170,170,170,.85);
 
     .displayStyle();
-
+    background: rgba(170,170,170,.85);
 }
 
 
